fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+/* * {
+	outline: 1px solid red;
+} */
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
